fix spacing issue

--- a/assets/section-pdp.css
+++ b/assets/section-pdp.css
@@ -65,6 +65,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--gap);
+    margin-bottom: -8px;
 }
 
 .pdp__variant-buttons {
